
    - CMFCatalogAware: allow easy subclassing of the "security indexes"
      that are reindexed by reindexObjectSecurity(), through the
      attribute _cmf_security_indexes.

    - doActionFor() propagates **kw to isActionSupported() through
      _checkTransitionGuard() until the guard.check() method so that
      StateChangeInfo() can be constructed with those kwargs.

  Bugs Fixed

    - Set cache headers in 304 responses from FSImage / FSFile
      (http://zope.org/Collectors/355)

    - CMFCore.DirectoryView: Do not cause ZODB writes or ConflictError
      if an old DirectoryView with a non-existing path is left. Sends a
      warning to stderr about those.
      (http://www.zope.org/Collectors/CMF/347)

    - CMFSetup utils: Fixed handling of comments and empty descriptions.
      (http://www.zope.org/Collectors/CMF/352)

    - CMFDefault.MetadataTool: When asked for a non-existing metadata
      policy, the tool would return the default policy unwrapped. This
      means, at a minimum, that the security declarations on the 
      MetadataElementPolicy instance would never be applied correctly.
      (http://www.zope.org/Collectors/CMF/342)

    - CMFSetup.workflow: Make sure to set the "permissions" attribute on
      DCWorkflow definitions to a tuple, which is expected throughout
      the DCWorkflow code. (http://www.zope.org/Collectors/CMF/346)

    - CMFCore.FSObject: Try to find and call the appropriate method to
      determine the skins tool name instead of hardcoding "portal_skins".
      (http://www.zope.org/Collectors/CMF/349)

    - CMFCore.FSZSQLMethod: Add the forgotten setting to allow simple 
      direct traversal for ZSQL methods to the list of settings recognized 
      and applied by FSZSQLMethods during instantiation and customization.
      (http://www.zope.org/Collectors/CMF/350)

    - CMFCore.FSObject: When customizing filesystem objects in the skins 
      tool, some security-related settings were not transferred to the 