@@ -129,7 +129,7 @@ class SyndicationTool (UniqueObject, SimpleItem, ActionProviderBase):
         else:
             try:
                 del self.syUpdatePeriod
-            except KeyError:
+            except (AttributeError, KeyError):
                 pass
 
         if updateFrequency is not None:
@@ -137,7 +137,7 @@ class SyndicationTool (UniqueObject, SimpleItem, ActionProviderBase):
         else:
             try:
                 del self.syUpdateFrequency
-            except KeyError:
+            except (AttributeError, KeyError):
                 pass
 
         if updateBase is not None:
@@ -147,7 +147,7 @@ class SyndicationTool (UniqueObject, SimpleItem, ActionProviderBase):
         else:
             try:
                 del self.syUpdateBase
-            except KeyError:
+            except (AttributeError, KeyError):
                 pass
 
         if max_items is not None:
@@ -155,7 +155,7 @@ class SyndicationTool (UniqueObject, SimpleItem, ActionProviderBase):
         else:
             try:
                 del self.max_items
-            except KeyError:
+            except (AttributeError, KeyError):
                 pass
 
         if REQUEST is not None:
