@@ -35,6 +35,9 @@ After CMF-1.5.1
 
   Bugs Fixed
 
+    - CMFDefault.SyndicationTool: Zope 2.8 raises AttributeError where
+      earlier Zopes used to raise KeyError.
+
     - Set cache headers in 304 responses from FSImage / FSFile
       (http://zope.org/Collectors/355)
 
